compil/output/batimentParser.java
// $ANTLR 3.4 C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g 2012-06-28 11:50:44

import java.util.LinkedList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class batimentParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADJ", "EXPONENT", "FLOAT", "ID", "INT", "OP_COMP", "WS", "'#'", "'$'", "'('", "')'", "','", "'->'", "'.'", "';'", "'='", "'@'", "'^'", "'cluster'", "'cycle'", "'false'", "'grammaire'", "'sequence'", "'true'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int ADJ=4;
    public static final int EXPONENT=5;
    public static final int FLOAT=6;
    public static final int ID=7;
    public static final int INT=8;
    public static final int OP_COMP=9;
    public static final int WS=10;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public batimentParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public batimentParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return batimentParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g"; }


    int n=0;
    int n2=0;


    // $ANTLR start "grammaire"
    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:12:1: grammaire : dinclude dnom= def_nom def_regles ;
    public final void grammaire() throws RecognitionException {
        String dnom =null;


        try {
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:13:2: ( dinclude dnom= def_nom def_regles )
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:13:4: dinclude dnom= def_nom def_regles
            {
            System.out.println("#include \"../grammaire/Parser.h\"");
            System.out.println("#include <vector>");
            System.out.println("#include <string>");
            System.out.println("#include \"../grammaire/Regle.h\"");
            System.out.println("#include \"../grammaire/OperateurCycle.h\"");
            System.out.println("#include \"../grammaire/MembreStandard.h\"");
            System.out.println("#include \"../grammaire/OperateurSequence.h\"");
            System.out.println("#include \"../grammaire/OperateurCluster.h\"");
            System.out.println("#include \"../grammaire/condition/ConditionAdj.h\"");
            System.out.println("#include \"../grammaire/condition/ConditionEgal.h\"");
            System.out.println("#include \"../grammaire/regles/CalculAttributs.h\"");

            pushFollow(FOLLOW_dinclude_in_grammaire27);
            dinclude();

            state._fsp--;


            pushFollow(FOLLOW_def_nom_in_grammaire31);
            dnom=def_nom();

            state._fsp--;


            System.out.println("class Parser"+dnom+" : public Parser {");
            System.out.println("public:");
            	System.out.println("Parser"+dnom+"(){");

            pushFollow(FOLLOW_def_regles_in_grammaire36);
            def_regles();

            state._fsp--;



            	System.out.println("}};");
            	

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "grammaire"



    // $ANTLR start "dinclude"
    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:32:1: dinclude : ( '#' i= ID )* ;
    public final void dinclude() throws RecognitionException {
        Token i=null;

        try {
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:33:2: ( ( '#' i= ID )* )
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:33:4: ( '#' i= ID )*
            {
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:33:4: ( '#' i= ID )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==11) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:33:5: '#' i= ID
            	    {
            	    match(input,11,FOLLOW_11_in_dinclude48); 

            	    i=(Token)match(input,ID,FOLLOW_ID_in_dinclude52); 

            	    System.out.println("#include \""+(i!=null?i.getText():null)+".cpp\"");

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "dinclude"



    // $ANTLR start "def_nom"
    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:35:1: def_nom returns [String nom] : 'grammaire' id= ID ;
    public final String def_nom() throws RecognitionException {
        String nom = null;


        Token id=null;

        try {
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:35:29: ( 'grammaire' id= ID )
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:35:31: 'grammaire' id= ID
            {
            match(input,25,FOLLOW_25_in_def_nom68); 

            id=(Token)match(input,ID,FOLLOW_ID_in_def_nom72); 

            nom= (id!=null?id.getText():null);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return nom;
    }
    // $ANTLR end "def_nom"



    // $ANTLR start "def_regles"
    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:36:1: def_regles : ( regle )* ;
    public final void def_regles() throws RecognitionException {
        try {
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:37:2: ( ( regle )* )
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:37:4: ( regle )*
            {
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:37:4: ( regle )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==ID) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:37:4: regle
            	    {
            	    pushFollow(FOLLOW_regle_in_def_regles83);
            	    regle();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "def_regles"



    // $ANTLR start "regle"
    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:39:1: regle : i1= ID '->' membre_droit ( ',' membre_droit )* '{' (lc= liste_contraintes )? '}' ( '{' ( liste_calcul | '@' c= ID ) '}' )? ;
    public final void regle() throws RecognitionException {
        Token i1=null;
        Token c=null;
        List<String> lc =null;


        try {
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:39:7: (i1= ID '->' membre_droit ( ',' membre_droit )* '{' (lc= liste_contraintes )? '}' ( '{' ( liste_calcul | '@' c= ID ) '}' )? )
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:39:9: i1= ID '->' membre_droit ( ',' membre_droit )* '{' (lc= liste_contraintes )? '}' ( '{' ( liste_calcul | '@' c= ID ) '}' )?
            {
            i1=(Token)match(input,ID,FOLLOW_ID_in_regle95); 

            match(input,16,FOLLOW_16_in_regle97); 

            System.out.println("vector<MembreDroit*> v"+n+";");

            pushFollow(FOLLOW_membre_droit_in_regle106);
            membre_droit();

            state._fsp--;


            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:41:16: ( ',' membre_droit )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==15) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:41:17: ',' membre_droit
            	    {
            	    match(input,15,FOLLOW_15_in_regle109); 

            	    pushFollow(FOLLOW_membre_droit_in_regle111);
            	    membre_droit();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            System.out.println("Regle* r"+n+" = new Regle(\""+(i1!=null?i1.getText():null)+"\",v"+n+");");System.out.println("ajouterRegle(r"+n+");");

            match(input,28,FOLLOW_28_in_regle121); 

            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:43:7: (lc= liste_contraintes )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ADJ||(LA4_0 >= 12 && LA4_0 <= 13)||LA4_0==20) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:43:8: lc= liste_contraintes
                    {
                    pushFollow(FOLLOW_liste_contraintes_in_regle128);
                    lc=liste_contraintes();

                    state._fsp--;


                    for(String s:lc) System.out.println("r"+n+"->"+s);

                    }
                    break;

            }


            match(input,29,FOLLOW_29_in_regle133); 

            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:44:3: ( '{' ( liste_calcul | '@' c= ID ) '}' )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==28) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:44:4: '{' ( liste_calcul | '@' c= ID ) '}'
                    {
                    match(input,28,FOLLOW_28_in_regle138); 

                    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:44:8: ( liste_calcul | '@' c= ID )
                    int alt5=2;
                    int LA5_0 = input.LA(1);

                    if ( (LA5_0==ID) ) {
                        alt5=1;
                    }
                    else if ( (LA5_0==20) ) {
                        alt5=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 5, 0, input);

                        throw nvae;

                    }
                    switch (alt5) {
                        case 1 :
                            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:44:9: liste_calcul
                            {
                            pushFollow(FOLLOW_liste_calcul_in_regle141);
                            liste_calcul();

                            state._fsp--;


                            System.out.println("r"+n+"->calculAtt = new Calcul"+n+"();");

                            }
                            break;
                        case 2 :
                            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:45:5: '@' c= ID
                            {
                            match(input,20,FOLLOW_20_in_regle149); 

                            c=(Token)match(input,ID,FOLLOW_ID_in_regle153); 

                            System.out.println("r"+n+"->calculAtt = new "+(c!=null?c.getText():null)+"();");

                            }
                            break;

                    }


                    match(input,29,FOLLOW_29_in_regle158); 

                    }
                    break;

            }


            n++;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "regle"



    // $ANTLR start "membre_droit"
    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:47:1: membre_droit : ( membreStandard | operateur );
    public final void membre_droit() throws RecognitionException {
        try {
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:48:2: ( membreStandard | operateur )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==ID) ) {
                alt7=1;
            }
            else if ( ((LA7_0 >= 22 && LA7_0 <= 23)||LA7_0==26) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;

            }
            switch (alt7) {
                case 1 :
                    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:48:5: membreStandard
                    {
                    pushFollow(FOLLOW_membreStandard_in_membre_droit177);
                    membreStandard();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:48:22: operateur
                    {
                    pushFollow(FOLLOW_operateur_in_membre_droit181);
                    operateur();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "membre_droit"



    // $ANTLR start "membreStandard"
    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:51:1: membreStandard : i2= ID ;
    public final void membreStandard() throws RecognitionException {
        Token i2=null;

        try {
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:52:2: (i2= ID )
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:52:5: i2= ID
            {
            i2=(Token)match(input,ID,FOLLOW_ID_in_membreStandard197); 

            System.out.println("v"+n+".push_back(new MembreStandard(\""+(i2!=null?i2.getText():null)+"\"));");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "membreStandard"



    // $ANTLR start "operateur"
    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:54:1: operateur : ( 'sequence' | 'cycle' | 'cluster' ) '(' i2= ID ',' '{' (lc= liste_contraintes )? '}' ( ',' ( '{' liste_calcul | '@' c= ID ) '}' )? ')' ;
    public final void operateur() throws RecognitionException {
        Token i2=null;
        Token c=null;
        List<String> lc =null;


        try {
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:55:2: ( ( 'sequence' | 'cycle' | 'cluster' ) '(' i2= ID ',' '{' (lc= liste_contraintes )? '}' ( ',' ( '{' liste_calcul | '@' c= ID ) '}' )? ')' )
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:55:4: ( 'sequence' | 'cycle' | 'cluster' ) '(' i2= ID ',' '{' (lc= liste_contraintes )? '}' ( ',' ( '{' liste_calcul | '@' c= ID ) '}' )? ')'
            {
            String opType="";

            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:55:23: ( 'sequence' | 'cycle' | 'cluster' )
            int alt8=3;
            switch ( input.LA(1) ) {
            case 26:
                {
                alt8=1;
                }
                break;
            case 23:
                {
                alt8=2;
                }
                break;
            case 22:
                {
                alt8=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;

            }

            switch (alt8) {
                case 1 :
                    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:55:24: 'sequence'
                    {
                    match(input,26,FOLLOW_26_in_operateur213); 

                    opType="OperateurSequence";

                    }
                    break;
                case 2 :
                    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:56:5: 'cycle'
                    {
                    match(input,23,FOLLOW_23_in_operateur221); 

                    opType="OperateurCycle";

                    }
                    break;
                case 3 :
                    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:57:4: 'cluster'
                    {
                    match(input,22,FOLLOW_22_in_operateur228); 

                    opType="OperateurCluster";

                    }
                    break;

            }


            match(input,13,FOLLOW_13_in_operateur235); 

            i2=(Token)match(input,ID,FOLLOW_ID_in_operateur241); 

            System.out.println(opType+"* op"+n2+"= new "+opType+"(\""+(i2!=null?i2.getText():null)+"\",\"OPE\");");

            match(input,15,FOLLOW_15_in_operateur247); 

            match(input,28,FOLLOW_28_in_operateur249); 

            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:59:11: (lc= liste_contraintes )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==ADJ||(LA9_0 >= 12 && LA9_0 <= 13)||LA9_0==20) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:59:12: lc= liste_contraintes
                    {
                    pushFollow(FOLLOW_liste_contraintes_in_operateur256);
                    lc=liste_contraintes();

                    state._fsp--;


                    for(String s:lc) System.out.println("op"+n2+"->"+s);

                    }
                    break;

            }


            match(input,29,FOLLOW_29_in_operateur261); 

            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:60:4: ( ',' ( '{' liste_calcul | '@' c= ID ) '}' )?
            int alt11=2;
            int LA11_0 = input.LA(1);

            if ( (LA11_0==15) ) {
                alt11=1;
            }
            switch (alt11) {
                case 1 :
                    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:60:5: ',' ( '{' liste_calcul | '@' c= ID ) '}'
                    {
                    match(input,15,FOLLOW_15_in_operateur267); 

                    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:60:9: ( '{' liste_calcul | '@' c= ID )
                    int alt10=2;
                    int LA10_0 = input.LA(1);

                    if ( (LA10_0==28) ) {
                        alt10=1;
                    }
                    else if ( (LA10_0==20) ) {
                        alt10=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 10, 0, input);

                        throw nvae;

                    }
                    switch (alt10) {
                        case 1 :
                            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:60:10: '{' liste_calcul
                            {
                            match(input,28,FOLLOW_28_in_operateur270); 

                            pushFollow(FOLLOW_liste_calcul_in_operateur272);
                            liste_calcul();

                            state._fsp--;


                            System.out.println("r"+n+"->calculAtt = new Calcul"+n+"();");

                            }
                            break;
                        case 2 :
                            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:61:4: '@' c= ID
                            {
                            match(input,20,FOLLOW_20_in_operateur279); 

                            c=(Token)match(input,ID,FOLLOW_ID_in_operateur283); 

                            System.out.println("r"+n+"->calculAtt = new "+(c!=null?c.getText():null)+"();");

                            }
                            break;

                    }


                    match(input,29,FOLLOW_29_in_operateur288); 

                    }
                    break;

            }


            match(input,14,FOLLOW_14_in_operateur293); 

            System.out.println("v"+n+".push_back(op"+n2+");");n2++;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "operateur"



    // $ANTLR start "liste_contraintes"
    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:63:1: liste_contraintes returns [List<String> liste] :c= contrainte ( '^' c2= contrainte )* ;
    public final List<String> liste_contraintes() throws RecognitionException {
        List<String> liste = null;


        String c =null;

        String c2 =null;


        try {
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:63:47: (c= contrainte ( '^' c2= contrainte )* )
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:64:2: c= contrainte ( '^' c2= contrainte )*
            {
            liste = new LinkedList<String>();

            pushFollow(FOLLOW_contrainte_in_liste_contraintes311);
            c=contrainte();

            state._fsp--;


            liste.add(c);

            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:64:76: ( '^' c2= contrainte )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( (LA12_0==21) ) {
                    alt12=1;
                }


                switch (alt12) {
            	case 1 :
            	    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:64:77: '^' c2= contrainte
            	    {
            	    match(input,21,FOLLOW_21_in_liste_contraintes315); 

            	    pushFollow(FOLLOW_contrainte_in_liste_contraintes319);
            	    c2=contrainte();

            	    state._fsp--;


            	    liste.add(c2);

            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return liste;
    }
    // $ANTLR end "liste_contraintes"



    // $ANTLR start "liste_calcul"
    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:66:1: liste_calcul : ( expr_calcul ';' )+ ;
    public final void liste_calcul() throws RecognitionException {
        try {
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:67:2: ( ( expr_calcul ';' )+ )
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:68:2: ( expr_calcul ';' )+
            {
             System.out.println("class Calcul"+n+" : public CalculAttributs {");System.out.println("void calculAttrib(Noeud* nouveau){");

            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:69:2: ( expr_calcul ';' )+
            int cnt13=0;
            loop13:
            do {
                int alt13=2;
                int LA13_0 = input.LA(1);

                if ( (LA13_0==ID) ) {
                    alt13=1;
                }


                switch (alt13) {
            	case 1 :
            	    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:69:3: expr_calcul ';'
            	    {
            	    pushFollow(FOLLOW_expr_calcul_in_liste_calcul338);
            	    expr_calcul();

            	    state._fsp--;


            	    match(input,18,FOLLOW_18_in_liste_calcul340); 

            	    }
            	    break;

            	default :
            	    if ( cnt13 >= 1 ) break loop13;
                        EarlyExitException eee =
                            new EarlyExitException(13, input);
                        throw eee;
                }
                cnt13++;
            } while (true);


            System.out.println("}};");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "liste_calcul"



    // $ANTLR start "contrainte"
    // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:71:2: contrainte returns [String toString] : (c= contrainte_egal |c= contrainte_adj |c= condition_unique |c= contrainte_generale | '(' c= contrainte ')' );
    public final String contrainte() throws RecognitionException {
        String toString = null;


        String c =null;


        try {
            // C:\\Users\\simon\\Documents\\prog_grammaires\\compil\\batiment.g:71:38: (c= contrainte_egal |c= contrainte_adj |c= condition_unique |c= contrainte_generale | '(' c= contrainte ')' )
            int alt14=5;
            switch ( input.LA(1) ) {
            case 12:
                {
                int LA14_1 = input.LA(2);

                if ( (LA14_1==INT) ) {
                    int LA14_5 = input.LA(3);

                    if ( (LA14_5==17) ) {
                        int LA14_6 = input.LA(4);

                        if ( (LA14_6==ID) ) {
                            int LA14_7 = input.LA(5);

                            if ( (LA14_7==19) ) {
                                alt14=1;
                            }
                            else if ( (LA14_7==OP_COMP) ) {
                                alt14=3;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 14, 7, input);

                                throw nvae;

                            }
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 14, 6, input);

                            throw nvae;

                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 14, 5, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 14, 1, input);

                    throw nvae;

                }
                }
                break;
            case ADJ:
                {
                alt14=2;
                }
                break;
            case 20:
                {
                alt14=4;
                }
                break;
            case 13:
                {
                alt14=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 14, 0, input);

                throw nvae;

            }
